--- a/car-showroom-3d/package.json
+++ b/car-showroom-3d/package.json
@@ -9,9 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/drei": "^9.99.0",
+    "@react-three/fiber": "^8.15.16",
+    "@react-three/postprocessing": "^2.16.0",
+    "@types/three": "^0.161.2",
+    "lamina": "^1.1.23",
+    "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.0"
+    "three": "^0.161.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
