--- a/car-showroom-3d/package.json
+++ b/car-showroom-3d/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nodetoy/react-nodetoy": "^0.1.24",
     "@react-three/drei": "^9.99.0",
     "@react-three/fiber": "^8.15.16",
     "@react-three/postprocessing": "^2.16.0",
