--- a/car-showroom-3d/package.json
+++ b/car-showroom-3d/package.json
@@ -13,6 +13,7 @@
     "@react-three/drei": "^9.99.0",
     "@react-three/fiber": "^8.15.16",
     "@react-three/postprocessing": "^2.16.0",
+    "@react-three/rapier": "^1.3.0",
     "@types/three": "^0.161.2",
     "lamina": "^1.1.23",
     "next": "14.1.0",
