--- a/car-showroom-3d/package.json
+++ b/car-showroom-3d/package.json
@@ -15,10 +15,15 @@
     "@react-three/postprocessing": "^2.16.0",
     "@react-three/rapier": "^1.3.0",
     "@types/three": "^0.161.2",
+    "d3": "^7.9.0",
     "lamina": "^1.1.23",
+    "mongoose": "^8.3.2",
     "next": "14.1.0",
+    "next-auth": "^4.24.7",
+    "next-cloudinary": "^6.5.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.0.1",
     "three": "^0.161.0"
   },
   "devDependencies": {
