--- a/car-showroom-3d/package.json
+++ b/car-showroom-3d/package.json
@@ -28,6 +28,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
+    "glsl-loader": "^0.0.1",
     "postcss": "^8",
     "tailwindcss": "^3.3.0"
   }
